# TiercePiscineBot

./: .gitignore  api.py  bot.py  db_interaction.py  params.py  pyproject.toml  requirement.txt
tiercepiscinebot/: __main__.py  api.py  db_interaction.py  decorateur.py  params.py  scroring.py
